--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ enableEmoji = true
 theme = "avicenna"
 
 # This is your page title, it appears in your tab
-title = "Αριστέα Γκιοξάρι | Aristea Gioxari"
+title = "Αριστέα Γκιοξάρη | Aristea Gioxari"
 
 # number of posts to show on the blog page
 paginate = 10
@@ -23,4 +23,4 @@ startLevel = 1
 
 [params]
 # it is used for the copy-right section of your page
-name = "Αριστέα Γκιοξάρι | Aristea Gioxari"
+name = "Αριστέα Γκιοξάρη | Aristea Gioxari"
