--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "avicenna"]
 	path = themes/avicenna
-	url = https://github.com/hadisinaee/avicenna.git
+	url = https://github.com/rossbar/avicenna.git
